--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,21 +5,6 @@ body{
     font-family: 'Lora', serif;
 }
 
-a{
-    color: $secondColor;
-    text-decoration: none;
-}
-
-.dropdown-toggle{
-    padding: 2px;
-}
-
-.motion:hover{
-    cursor: pointer;
-}
-
-
-
 nav{
     ul{
         display: flex;
@@ -30,25 +15,52 @@ nav{
             list-style-type: none;
             margin: auto 10px;
             color: $secondColor;
-        a:hover{
+            a{
             color: $secondColor;
+            text-decoration: none;
+            position: relative;
+            padding: 2px;
+            }
+            a::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                border-radius: 2px;
+                background-color: $secondColor;
+                bottom: 0;
+                left: 0;
+                transform-origin: right;
+                transform: scaleX(0);
+                transition: transform .3s ease-in-out;
+              }
+              a:hover::before {
+                transform-origin: left;
+                transform: scaleX(1);
+              }
+              a:hover{
+                  color: $primaryColor;
+              }
         }
     }
-    }
-}
-
-h1{
-    color: $primaryColor;
-    font-size: 4rem;
-    line-height: 3rem;
-    
-    
-
 }
 
 main{
     width: 70vw;
     height: 300px;
     margin: 0 auto;
+    h1{
+        color: $primaryColor;
+        font-size: 4rem;
+        line-height: 3rem;
+        margin-bottom: 2px;
+        margin-top: 2px;
+    }
+    .bottom{
+        text-align: end;
+    }
+    .car{
+      
+    }
 
 }
