--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,19 +8,6 @@ body {
   font-family: "Lora", serif;
 }
 
-a {
-  color: #2A2F3F;
-  text-decoration: none;
-}
-
-.dropdown-toggle {
-  padding: 2px;
-}
-
-.motion:hover {
-  cursor: pointer;
-}
-
 nav ul {
   display: flex;
   padding: 7px;
@@ -32,20 +19,47 @@ nav ul li {
   margin: auto 10px;
   color: #2A2F3F;
 }
-nav ul li a:hover {
+nav ul li a {
   color: #2A2F3F;
+  text-decoration: none;
+  position: relative;
+  padding: 2px;
 }
-
-h1 {
+nav ul li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 2px;
+  background-color: #2A2F3F;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+nav ul li a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+nav ul li a:hover {
   color: #364E98;
-  font-size: 4rem;
-  line-height: 3rem;
 }
 
 main {
   width: 70vw;
   height: 300px;
   margin: 0 auto;
+}
+main h1 {
+  color: #364E98;
+  font-size: 4rem;
+  line-height: 3rem;
+  margin-bottom: 2px;
+  margin-top: 2px;
+}
+main .bottom {
+  text-align: end;
 }
 
 /*# sourceMappingURL=styles.css.map */
