--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -47,8 +47,9 @@ nav{
 
 main{
     width: 70vw;
-    height: 300px;
+    height: 700px;
     margin: 0 auto;
+    padding: 10px;
     h1{
         color: $primaryColor;
         font-size: 4rem;
@@ -60,7 +61,13 @@ main{
         text-align: end;
     }
     .car{
-      
+        img{
+            width: 30px;
+        }
     }
+}
 
+.contact{
+    width: 100vw;
+    background-color: $primaryColor;
 }
