--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,6 +8,10 @@ body {
   font-family: "Lora", serif;
 }
 
+li {
+  list-style-type: none;
+}
+
 nav ul {
   display: flex;
   padding: 7px;
@@ -15,7 +19,6 @@ nav ul {
 }
 nav ul li {
   padding: 5px;
-  list-style-type: none;
   margin: auto 10px;
   color: #2A2F3F;
 }
@@ -43,17 +46,17 @@ nav ul li a:hover::before {
   transform: scaleX(1);
 }
 nav ul li a:hover {
-  color: #364E98;
+  color: #2D4180;
 }
 
 main {
-  width: 70vw;
-  height: 700px;
+  width: 55vw;
+  height: 100vh;
   margin: 0 auto;
   padding: 10px;
 }
 main h1 {
-  color: #364E98;
+  color: #2D4180;
   font-size: 4rem;
   line-height: 3rem;
   margin-bottom: 2px;
@@ -62,13 +65,74 @@ main h1 {
 main .bottom {
   text-align: end;
 }
+main .car {
+  z-index: -2;
+}
 main .car img {
-  width: 30px;
+  max-width: 55vw;
 }
 
 .contact {
   width: 100vw;
-  background-color: #364E98;
+  height: 100vh;
+  background-color: #2D4180;
+  color: white;
+  position: relative;
+}
+.contact .big {
+  width: 55vw;
+  max-width: 704px;
+  margin: 0 22.5vw;
+  position: absolute;
+  top: 50px;
+}
+.contact .big h1 {
+  font-size: 3rem;
+}
+.contact .big ul {
+  display: flex;
+  padding: 5px 0;
+}
+.contact .big ul li {
+  padding-right: 5px;
+  margin-right: 2rem;
+}
+.contact .big ul li a {
+  color: white;
+  font-size: 1.5rem;
+}
+.contact .big form {
+  margin-top: 60px;
+}
+.contact .big form .part {
+  margin-top: 30px;
+}
+.contact .big form .part label {
+  display: block;
+}
+.contact .big form .part input, .contact .big form .part textarea {
+  width: 100%;
+  background-color: #A5AFCA;
+  outline: none;
+  border: none;
+  padding: 10px;
+  font-size: 0.8rem;
+}
+.contact .big form .but {
+  padding-top: 35px;
+}
+.contact .big form .but button {
+  padding: 1rem;
+  width: 20%;
+  border: none;
+}
+.contact footer {
+  position: absolute;
+  bottom: 0;
+}
+.contact footer h6 {
+  width: 100vw;
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
