--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,42 @@
 $secondColor: #2A2F3F;
 $primaryColor: #2D4180;
 $backColor: #A5AFCA;
+
+@mixin navi{
+    ul{
+        display: flex;
+        padding: 7px;
+        justify-content: center;
+        li{
+            padding: 5px;
+            margin: auto 10px;
+            color: $secondColor;
+            a{
+            color: $secondColor;
+            text-decoration: none;
+            position: relative;
+            padding: 2px;
+            }
+            a::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                border-radius: 2px;
+                background-color: $secondColor;
+                bottom: 0;
+                left: 0;
+                transform-origin: right;
+                transform: scaleX(0);
+                transition: transform .3s ease-in-out;
+              }
+              a:hover::before {
+                transform-origin: left;
+                transform: scaleX(1);
+              }
+              a:hover{
+                  color: $primaryColor;
+              }
+        }
+    }
+}
