--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,42 +10,7 @@ li{
 }
 
 nav{
-    ul{
-        display: flex;
-        padding: 7px;
-        justify-content: center;
-        li{
-            padding: 5px;
-            margin: auto 10px;
-            color: $secondColor;
-            a{
-            color: $secondColor;
-            text-decoration: none;
-            position: relative;
-            padding: 2px;
-            }
-            a::before {
-                content: '';
-                position: absolute;
-                width: 100%;
-                height: 2px;
-                border-radius: 2px;
-                background-color: $secondColor;
-                bottom: 0;
-                left: 0;
-                transform-origin: right;
-                transform: scaleX(0);
-                transition: transform .3s ease-in-out;
-              }
-              a:hover::before {
-                transform-origin: left;
-                transform: scaleX(1);
-              }
-              a:hover{
-                  color: $primaryColor;
-              }
-        }
-    }
+    @include navi;
 }
 
 main{
@@ -120,8 +85,9 @@ main{
                 padding-top:35px;
                 button{
                     padding:1rem;
-                    width: 20% ;
+                    width: 25% ;
                     border: none;
+                    font-size: 0.9rem;
                 }
             }
             
@@ -132,6 +98,8 @@ main{
     footer{
         position: absolute;
         bottom: 0;
+        padding: 20px;
+        
         h6{
             width: 100vw;
             text-align: center;
