--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -123,12 +123,14 @@ main .car img {
 }
 .contact .big form .but button {
   padding: 1rem;
-  width: 20%;
+  width: 25%;
   border: none;
+  font-size: 0.9rem;
 }
 .contact footer {
   position: absolute;
   bottom: 0;
+  padding: 20px;
 }
 .contact footer h6 {
   width: 100vw;
