--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -40,3 +40,77 @@ $backColor: #A5AFCA;
         }
     }
 }
+
+@mixin contact-me{
+    .contact{
+        width: 100vw;
+        height: 100vh;
+        background-color: $primaryColor;
+        color: white;
+        position: relative;
+        .big{
+            width: 55vw;
+            max-width: 704px;
+            margin:0 22.5vw;
+            position: absolute;
+            top: 50px;
+    
+            h1{
+                font-size: 3rem;
+                
+            }
+            ul{
+                display: flex;
+                padding: 5px 0;
+                li{
+                    padding-right: 5px;
+                    margin-right: 2rem;
+                    a{
+                        color: white;
+                        font-size: 1.5rem;
+                    }
+                }
+            }
+            form{
+                margin-top: 60px;
+                .part{
+                    margin-top: 30px;
+                   label{
+                       display: block;
+                   }
+                   input, textarea{
+                       width: 100%;
+                       background-color: $backColor;
+                       outline: none;
+                       border: none;
+                       padding: 10px;
+                       font-size: 0.8rem;
+                   }
+                }
+                .but{
+                    padding-top:35px;
+                    button{
+                        padding:1rem;
+                        width: 25% ;
+                        border: none;
+                        font-size: 0.9rem;
+                    }
+                }
+                
+    
+            }
+        }
+    
+        footer{
+            position: absolute;
+            bottom: 0;
+            padding: 20px;
+            
+            h6{
+                width: 100vw;
+                text-align: center;
+            }
+        }          
+    
+    }
+}
