--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -142,7 +142,7 @@ main .car img {
 .about-me {
   width: 100vw;
   height: 100vh;
-  max-height: 816px;
+  max-height: 750px;
   margin-bottom: 1rem;
   display: grid;
   grid-template-columns: 1.5fr repeat(12, 70px) 1.5fr;
@@ -164,6 +164,9 @@ main .car img {
 .about-me .heading {
   grid-row: 2/10;
   grid-column: 8/13;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .about-me .heading .huge {
   font-size: 5rem;
@@ -202,6 +205,44 @@ main .car img {
 .story .div-b {
   grid-column: 6/13;
   grid-row: 9/12;
+}
+
+.projects {
+  width: 70vw;
+  height: 100vh;
+}
+.projects__items {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 2rem 5rem;
+  gap: 1rem 1rem;
+}
+.projects__item {
+  width: 30%;
+  height: 40%;
+  border-bottom: 5px solid #364e98;
+  cursor: pointer;
+  position: relative;
+}
+.projects__item img {
+  width: 100%;
+  height: 100%;
+}
+.projects__item::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  background-color: #364e98;
+  opacity: 0;
+  transition: all 1s;
+}
+.projects__item:hover::after {
+  opacity: 0.7;
 }
 
 /*# sourceMappingURL=styles.css.map */
