--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,8 @@ nav {
   @include navi;
 }
 
+// home
+
 main {
   width: 55vw;
   height: 100vh;
@@ -40,6 +42,8 @@ main {
   @include contact-me;
   background-color: $dark;
 }
+
+// About
 
 .about-me {
   width: 100vw;
@@ -86,6 +90,9 @@ main {
   .p-body-a {
     grid-column: 3 / 6;
     grid-row: 6 / 7;
+    .p-bold-a{
+        font-weight: bold;
+    }
   }
   .div-a {
     grid-column: 6 / 13;
@@ -95,6 +102,9 @@ main {
   .p-body-b {
     grid-column: 3 / 6;
     grid-row: 9 / 10;
+    .p-bold-b{
+        font-weight: bold;
+    }
   }
 
   .div-b {
@@ -103,44 +113,111 @@ main {
   }
 }
 
+// Project
+
 .projects {
-    width: 70vw;
-    height: 90vh;
-    &__items {
+  width: 70vw;
+  height: 90vh;
+  &__items {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2rem 5rem;
+    gap: 1rem 1rem;
+  }
+
+  &__item {
+    width: 30%;
+    height: 40%;
+    border-bottom: 5px solid $primaryColor;
+    cursor: pointer;
+
+    img {
       width: 100%;
       height: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 2rem 5rem;
-      gap: 1rem 1rem;
     }
-  
-    &__item {
-      width: 30%;
-      height: 40%;
-      border-bottom: 5px solid $primaryColor;
-      cursor: pointer;
-      
-      img {
-        width: 100%;
-        height: 100%;
-      }
-      position: relative;
-      &::after {
-        content: '';
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        left: 0;
-        background-color: $primaryColor;
-        opacity: 0;
-        @include transition(1s);
-      }
-  
-      &:hover::after {
-        opacity: 0.7;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      left: 0;
+      background-color: $primaryColor;
+      opacity: 0;
+      @include transition(1s);
+    }
+
+    &:hover::after {
+      opacity: 0.7;
+    }
+  }
+}
+
+// responsiveness
+
+//   @include media-xsm {
+//     .contact {
+//       h2 {
+//         font-size: 2rem;
+//         margin-bottom: 1rem;
+//       }
+//       &__list {
+//         gap: 2rem 1.2rem;
+//         font-size: 1.2rem;
+//       }
+//     }
+//   }
+//   @include media-sm {
+
+//     .contact {
+//       h2 {
+//         font-size: 2.5rem;
+//         margin-bottom: 1.5rem;
+//       }
+//       &__list {
+//         gap: 2.5rem 2rem;
+//         font-size: 1.5rem;
+//       }
+//     }
+//   }
+@include media-md {
+  .about-me {
+    width: 90vw;
+    margin: auto;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    .img-cont {
+      width: 100%;
+      height: 70%;
+    }
+    .heading {
+      .huge {
+        font-size: 2rem;
       }
     }
   }
-  
+
+  .story {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    .p-huge {
+      width: 90vw;
+      margin: 2rem 5vw;
+      font-size: 1.8rem;
+    }
+    .p-body-a,
+    .p-body-b {
+      width: 90vw;
+      margin: 1rem 5vw 0.5rem;
+    }
+    .div-a, .div-b {
+      width: 90vw;
+      margin: 0rem 5vw 2rem;
+    }
+  }
+}
