--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -78,7 +78,7 @@ main .car img {
   background-color: #364e98;
   color: white;
   position: relative;
-  background-color: #2D4180;
+  background-color: #2d4180;
 }
 .contact .big {
   width: 55vw;
@@ -194,6 +194,9 @@ main .car img {
   grid-column: 3/6;
   grid-row: 6/7;
 }
+.story .p-body-a .p-bold-a {
+  font-weight: bold;
+}
 .story .div-a {
   grid-column: 6/13;
   grid-row: 6/9;
@@ -201,6 +204,9 @@ main .car img {
 .story .p-body-b {
   grid-column: 3/6;
   grid-row: 9/10;
+}
+.story .p-body-b .p-bold-b {
+  font-weight: bold;
 }
 .story .div-b {
   grid-column: 6/13;
@@ -243,6 +249,43 @@ main .car img {
 }
 .projects__item:hover::after {
   opacity: 0.7;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .about-me {
+    width: 90vw;
+    margin: auto;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .about-me .img-cont {
+    width: 100%;
+    height: 70%;
+  }
+  .about-me .heading .huge {
+    font-size: 2rem;
+  }
+
+  .story {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+  .story .p-huge {
+    width: 90vw;
+    margin: 2rem 5vw;
+    font-size: 1.8rem;
+  }
+  .story .p-body-a,
+.story .p-body-b {
+    width: 90vw;
+    margin: 1rem 5vw 0.5rem;
+  }
+  .story .div-a, .story .div-b {
+    width: 90vw;
+    margin: 0rem 5vw 2rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
