--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -90,8 +90,8 @@ main {
   .p-body-a {
     grid-column: 3 / 6;
     grid-row: 6 / 7;
-    .p-bold-a{
-        font-weight: bold;
+    .p-bold-a {
+      font-weight: bold;
     }
   }
   .div-a {
@@ -102,8 +102,8 @@ main {
   .p-body-b {
     grid-column: 3 / 6;
     grid-row: 9 / 10;
-    .p-bold-b{
-        font-weight: bold;
+    .p-bold-b {
+      font-weight: bold;
     }
   }
 
@@ -132,7 +132,6 @@ main {
     width: 30%;
     height: 40%;
     border-bottom: 5px solid $primaryColor;
-    cursor: pointer;
 
     img {
       width: 100%;
@@ -158,66 +157,301 @@ main {
 
 // responsiveness
 
-//   @include media-xsm {
-//     .contact {
-//       h2 {
-//         font-size: 2rem;
-//         margin-bottom: 1rem;
-//       }
-//       &__list {
-//         gap: 2rem 1.2rem;
-//         font-size: 1.2rem;
-//       }
-//     }
-//   }
-//   @include media-sm {
+   @include media-lg{
+    .about-me {
+        width: 100vw;
+        height: 100vh;
+        max-height: 750px;
+        margin-bottom: 1rem;
+        @include grid;
+        .img-cont {
+          grid-row: 2 / 10;
+          grid-column: 3 / 8;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .heading {
+          grid-row: 2 / 10;
+          grid-column: 8 / 13;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .huge {
+            font-size: 5rem;
+            color: $primaryColor;
+            margin: auto 0;
+          }
+        }
+      }
+      
+      .story {
+        width: 100vw;
+        height: 100vh;
+        background-color: $primaryColor;
+        color: white;
+        @include grid;
+        .p-huge {
+          grid-column: 3 / 12;
+          grid-row: 3 / 6;
+          font-size: 2rem;
+        }
+        .p-body-a {
+          grid-column: 3 / 6;
+          grid-row: 6 / 7;
+          .p-bold-a {
+            font-weight: bold;
+          }
+        }
+        .div-a {
+          grid-column: 6 / 13;
+          grid-row: 6 / 9;
+        }
+      
+        .p-body-b {
+          grid-column: 3 / 6;
+          grid-row: 9 / 10;
+          .p-bold-b {
+            font-weight: bold;
+          }
+        }
+      
+        .div-b {
+          grid-column: 6 / 13;
+          grid-row: 9 / 12;
+        }
+      }
+      
+      // Project
+      
+      .projects {
+        width: 70vw;
+        height: 90vh;
+        &__items {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          padding: 2rem 5rem;
+          gap: 1rem 1rem;
+        }
+      
+        &__item {
+          width: 30%;
+          height: 40%;
+          border-bottom: 5px solid $primaryColor;
+        }
+      }
+     
+   }
 
-//     .contact {
-//       h2 {
-//         font-size: 2.5rem;
-//         margin-bottom: 1.5rem;
-//       }
-//       &__list {
-//         gap: 2.5rem 2rem;
-//         font-size: 1.5rem;
-//       }
-//     }
-//   }
-@include media-md {
-  .about-me {
-    width: 90vw;
-    margin: auto;
-    margin-bottom: 1rem;
-    display: flex;
-    flex-direction: column;
-    .img-cont {
-      width: 100%;
-      height: 70%;
+   @include media-md {
+    .about-me {
+      width: 90vw;
+      margin: auto;
+      margin-bottom: 1rem;
+      display: flex;
+      flex-direction: column;
+      .img-cont {
+        width: 100%;
+        height: 70%;
+      }
+      .heading {
+        .huge {
+          font-size: 2rem;
+        }
+      }
     }
-    .heading {
-      .huge {
-        font-size: 2rem;
+ 
+    .story {
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      .p-huge {
+        width: 90vw;
+        margin: 2rem 5vw;
+        font-size: 1.8rem;
+      }
+      .p-body-a,
+      .p-body-b {
+        width: 90vw;
+        margin: 1rem 5vw 0.5rem;
+      }
+      .div-a,
+      .div-b {
+        width: 90vw;
+        margin: 0rem 5vw 2rem;
+      }
+    }
+ 
+    .projects {
+      width: 90vw;
+      height: auto;
+      margin: auto;
+      &__items {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        padding: 1.5rem 1rem;
+        gap: 1rem 1rem;
+      }
+      &__item {
+        width: 50%;
+        height: 40%;
+        margin: auto;
       }
     }
   }
 
-  .story {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    .p-huge {
+  @include media-sm {
+    .about-me {
       width: 90vw;
-      margin: 2rem 5vw;
-      font-size: 1.8rem;
+      margin: auto;
+      margin-bottom: 1rem;
+      display: flex;
+      flex-direction: column;
+      .img-cont {
+        width: 100%;
+        height: 70%;
+      }
+      .heading {
+        .huge {
+          font-size: 2rem;
+        }
+      }
     }
-    .p-body-a,
-    .p-body-b {
-      width: 90vw;
-      margin: 1rem 5vw 0.5rem;
+ 
+    .story {
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      .p-huge {
+        width: 90vw;
+        margin: 2rem 5vw;
+        font-size: 1.6rem;
+      }
+      .p-body-a,
+      .p-body-b {
+        width: 90vw;
+        margin: 1rem 5vw 0.2rem;
+        font-size: 0.9rem;
+      }
+      .div-a,
+      .div-b {
+        width: 90vw;
+        margin: 0rem 5vw 2rem;
+        font-size: 0.9rem;
+      }
     }
-    .div-a, .div-b {
+ 
+    .projects {
       width: 90vw;
-      margin: 0rem 5vw 2rem;
+      height: auto;
+      margin: auto;
+      &__items {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        padding: 1.5rem 1rem;
+        gap: 1rem 1rem;
+      }
+      &__item {
+        width: 70%;
+        height: 40%;
+        margin: auto;
+      }
     }
   }
-}
+
+  @include media-xsm {
+    .about-me {
+      width: 90vw;
+      height: 60vh;
+      margin: auto;
+      margin-bottom: 1rem;
+      display: flex;
+      flex-direction: column;
+      .img-cont {
+        width: 100%;
+        height: 70%;
+      }
+      .heading {
+        .huge {
+          font-size: 2rem;
+        }
+      }
+    }
+ 
+    .story {
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      .p-huge {
+        width: 90vw;
+        margin: 2rem 5vw;
+        font-size: 1.6rem;
+      }
+      .p-body-a,
+      .p-body-b {
+        width: 90vw;
+        margin: 1rem 5vw 0.2rem;
+        font-size: 0.9rem;
+      }
+      .div-a,
+      .div-b {
+        width: 90vw;
+        margin: 0rem 5vw 2rem;
+        font-size: 0.9rem;
+      }
+    }
+ 
+    .projects {
+      width: 90vw;
+      height: auto;
+      margin: auto;
+      &__items {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        padding: 1.5rem 1rem;
+        gap: 1rem 1rem;
+      }
+      &__item {
+        width: 80%;
+        height: 40%;
+        margin: auto;
+      }
+    }
+ 
+    .big {
+      width: 55vw;
+      max-width: 704px;
+      margin: 0 22.5vw;
+      position: absolute;
+      top: 50px;
+ 
+      h1 {
+        font-size: 1.7rem !important;
+      }
+      form {
+        .but {
+          button {
+            width: 40% !important;
+          }
+        }
+      }
+    }
+  }
+ 
+  
