--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -230,7 +230,6 @@ main .car img {
   width: 30%;
   height: 40%;
   border-bottom: 5px solid #364e98;
-  cursor: pointer;
   position: relative;
 }
 .projects__item img {
@@ -251,7 +250,98 @@ main .car img {
   opacity: 0.7;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
+  .about-me {
+    width: 100vw;
+    height: 100vh;
+    max-height: 750px;
+    margin-bottom: 1rem;
+    display: grid;
+    grid-template-columns: 1.5fr repeat(12, 70px) 1.5fr;
+    grid-template-rows: repeat(11, 1fr);
+    row-gap: 1rem;
+    column-gap: 1.5rem;
+  }
+  .about-me .img-cont {
+    grid-row: 2/10;
+    grid-column: 3/8;
+  }
+  .about-me .img-cont img {
+    width: 100%;
+    height: 100%;
+  }
+  .about-me .heading {
+    grid-row: 2/10;
+    grid-column: 8/13;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-me .heading .huge {
+    font-size: 5rem;
+    color: #364e98;
+    margin: auto 0;
+  }
+
+  .story {
+    width: 100vw;
+    height: 100vh;
+    background-color: #364e98;
+    color: white;
+    display: grid;
+    grid-template-columns: 1.5fr repeat(12, 70px) 1.5fr;
+    grid-template-rows: repeat(11, 1fr);
+    row-gap: 1rem;
+    column-gap: 1.5rem;
+  }
+  .story .p-huge {
+    grid-column: 3/12;
+    grid-row: 3/6;
+    font-size: 2rem;
+  }
+  .story .p-body-a {
+    grid-column: 3/6;
+    grid-row: 6/7;
+  }
+  .story .p-body-a .p-bold-a {
+    font-weight: bold;
+  }
+  .story .div-a {
+    grid-column: 6/13;
+    grid-row: 6/9;
+  }
+  .story .p-body-b {
+    grid-column: 3/6;
+    grid-row: 9/10;
+  }
+  .story .p-body-b .p-bold-b {
+    font-weight: bold;
+  }
+  .story .div-b {
+    grid-column: 6/13;
+    grid-row: 9/12;
+  }
+
+  .projects {
+    width: 70vw;
+    height: 90vh;
+  }
+  .projects__items {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2rem 5rem;
+    gap: 1rem 1rem;
+  }
+  .projects__item {
+    width: 30%;
+    height: 40%;
+    border-bottom: 5px solid #364e98;
+  }
+}
+@media screen and (max-width: 1024px) {
   .about-me {
     width: 90vw;
     margin: auto;
@@ -282,9 +372,166 @@ main .car img {
     width: 90vw;
     margin: 1rem 5vw 0.5rem;
   }
-  .story .div-a, .story .div-b {
+  .story .div-a,
+.story .div-b {
     width: 90vw;
     margin: 0rem 5vw 2rem;
+  }
+
+  .projects {
+    width: 90vw;
+    height: auto;
+    margin: auto;
+  }
+  .projects__items {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1.5rem 1rem;
+    gap: 1rem 1rem;
+  }
+  .projects__item {
+    width: 50%;
+    height: 40%;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about-me {
+    width: 90vw;
+    margin: auto;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .about-me .img-cont {
+    width: 100%;
+    height: 70%;
+  }
+  .about-me .heading .huge {
+    font-size: 2rem;
+  }
+
+  .story {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+  .story .p-huge {
+    width: 90vw;
+    margin: 2rem 5vw;
+    font-size: 1.6rem;
+  }
+  .story .p-body-a,
+.story .p-body-b {
+    width: 90vw;
+    margin: 1rem 5vw 0.2rem;
+    font-size: 0.9rem;
+  }
+  .story .div-a,
+.story .div-b {
+    width: 90vw;
+    margin: 0rem 5vw 2rem;
+    font-size: 0.9rem;
+  }
+
+  .projects {
+    width: 90vw;
+    height: auto;
+    margin: auto;
+  }
+  .projects__items {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1.5rem 1rem;
+    gap: 1rem 1rem;
+  }
+  .projects__item {
+    width: 70%;
+    height: 40%;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 576px) {
+  .about-me {
+    width: 90vw;
+    height: 60vh;
+    margin: auto;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .about-me .img-cont {
+    width: 100%;
+    height: 70%;
+  }
+  .about-me .heading .huge {
+    font-size: 2rem;
+  }
+
+  .story {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+  .story .p-huge {
+    width: 90vw;
+    margin: 2rem 5vw;
+    font-size: 1.6rem;
+  }
+  .story .p-body-a,
+.story .p-body-b {
+    width: 90vw;
+    margin: 1rem 5vw 0.2rem;
+    font-size: 0.9rem;
+  }
+  .story .div-a,
+.story .div-b {
+    width: 90vw;
+    margin: 0rem 5vw 2rem;
+    font-size: 0.9rem;
+  }
+
+  .projects {
+    width: 90vw;
+    height: auto;
+    margin: auto;
+  }
+  .projects__items {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1.5rem 1rem;
+    gap: 1rem 1rem;
+  }
+  .projects__item {
+    width: 80%;
+    height: 40%;
+    margin: auto;
+  }
+
+  .big {
+    width: 55vw;
+    max-width: 704px;
+    margin: 0 22.5vw;
+    position: absolute;
+    top: 50px;
+  }
+  .big h1 {
+    font-size: 1.7rem !important;
+  }
+  .big form .but button {
+    width: 40% !important;
   }
 }
 
